--- a/src/locales/de/transparencia.json
+++ b/src/locales/de/transparencia.json
@@ -140,7 +140,7 @@
 
   "aria": { "copy_address": "Adresse kopieren" },
 
-  "footer": "© MOONRISE TECHNOLOGIES LLC (WY, USA). Alle Rechte vorbehalten.",
+  "footer": "© MOONRISE. Alle Rechte vorbehalten.",
 
   "seo": {
     "meta_title": "MoonRise — On-Chain-Transparenz",
