--- a/src/locales/en/transparencia.json
+++ b/src/locales/en/transparencia.json
@@ -143,7 +143,7 @@
 
   "aria": { "copy_address": "Copy address" },
 
-  "footer": "© MOONRISE TECHNOLOGIES LLC (WY, USA). All rights reserved.",
+  "footer": "© MOONRISE. All rights reserved.",
 
   "seo": {
     "meta_title": "MoonRise — On-chain Transparency",
