--- a/src/locales/es/transparencia.json
+++ b/src/locales/es/transparencia.json
@@ -140,7 +140,7 @@
 
   "aria": { "copy_address": "Copiar dirección" },
 
-  "footer": "© MOONRISE TECHNOLOGIES LLC (WY, USA). Todos los derechos reservados.",
+  "footer": "© MOONRISE. Todos los derechos reservados.",
 
   "seo": {
     "meta_title": "MoonRise — Transparencia On-chain",
