--- a/src/locales/fr/transparencia.json
+++ b/src/locales/fr/transparencia.json
@@ -140,7 +140,7 @@
 
   "aria": { "copy_address": "Copier l’adresse" },
 
-  "footer": "© MOONRISE TECHNOLOGIES LLC (WY, USA). Tous droits réservés.",
+  "footer": "© MOONRISE. Tous droits réservés.",
 
   "seo": {
     "meta_title": "MoonRise — Transparence On-chain",
