--- a/src/locales/hi/hero.json
+++ b/src/locales/hi/hero.json
@@ -1,26 +1,15 @@
 {
   "eyebrow": "प्रौद्योगिकी • अवसंरचना • निष्पादन",
-  "trustBadge": "रीयल-टाइम में ऑडिटेबल संचालन",
-  "headline": "<1>MoonRise</1> एक <3>पूर्ण</3> पारिस्थितिकी तंत्र बनाता है।<br/>स्वामित्व तकनीक।<br/>पूर्ण एकीकरण।<br/>दीर्घकालिक दृष्टि।",
-  "slogan": "वास्तविक वित्तीय प्रणाली के लिए तकनीकी शक्ति। न hype। न बहाना।",
-  "subhead": "ब्लॉकचेन पर अवसंरचना कंपनी। जुड़े हुए उत्पाद — नेटवर्क, वॉलेट, एक्सचेंज और मॉड्यूल — तकनीकी आधार, प्रत्यक्ष नियंत्रण और स्पष्ट मिशन के साथ: स्वायत्तता के साथ वास्तविक मूल्य बनाना।",
-  "institutionalLine": "सार्वजनिक पारदर्शिता, खुले अनुबंध और ऑन-चेन ट्रैकिंग 24/7।",
+  "trustBadge": "रीयल-टाइम ऑडिट-योग्य संचालन",
+  "headline": "<1>MoonRise</1> एक <3>पूर्ण</3> इकोसिस्टम बनाती है।<br/>स्वदेशी तकनीक।<br/>पूर्ण एकीकरण।<br/>दीर्घकालिक दृष्टि।",
+  "slogan": "वास्तविक वित्तीय तंत्र के लिए तकनीकी शक्ति। कोई हाइप नहीं। कोई बहाना नहीं।",
+  "subhead": "कनेक्टेड ब्लॉकचेन अवसंरचना — नेटवर्क, वॉलेट, एक्सचेंज और मॉड्यूल — तकनीकी आधार, प्रत्यक्ष नियंत्रण और स्पष्ट मिशन के साथ: स्वायत्तता से वास्तविक मूल्य बनाना।",
+  "institutionalLine": "सार्वजनिक पारदर्शिता, खुले अनुबंध और 24/7 ऑन-चेन ट्रैकिंग।",
   "kpisAriaLabel": "मुख्य संकेतक",
   "kpis": [
-    {
-      "label": "प्रचलन आपूर्ति का लॉक किया गया हिस्सा (on-chain)",
-      "countTo": 68.75,
-      "suffix": "%",
-      "decimals": 2
-    },
-    {
-      "label": "टोकनयुक्त वास्तविक संपत्ति (Moon+)",
-      "value": "RWA"
-    },
-    {
-      "label": "MoonRise Technologies · WY",
-      "value": "LLC USA"
-    }
+    { "label": "परिचालित सप्लाई का लॉक्ड हिस्सा (ऑन-चेन)", "countTo": 68.75, "suffix": "%", "decimals": 2 },
+    { "label": "टोकनकृत वास्तविक-दुनिया परिसंपत्तियाँ (Moon+)", "value": "RWA" },
+    { "label": "वैश्विक और ऑडिट-योग्य अवसंरचना", "value": "MoonRise" }
   ],
   "cta": {
     "ecosystem": "इकोसिस्टम देखें",
