--- a/src/locales/hi/moonplus.json
+++ b/src/locales/hi/moonplus.json
@@ -65,11 +65,6 @@
       { "q": "एसेट कौन ऑपरेट करता है?", "a": "सेक्टर कंपनियाँ और स्वतंत्र SPV, अपनी दायित्वों के लिए जिम्मेदार।" }
     ]
   },
-  "disclaimer": "रिटर्न का कोई वादा नहीं। ऑपरेशन बाजार जोखिम, कानूनी आवश्यकताओं और रणनीतिक समायोजनों के अधीन हैं।",
-  "legal": {
-    "moonplus_name": "MoonRise Technologies",
-    "moonplus_jurisdiction": "Registered LLC (WY, USA). Moon+: RWA तकनीकी इन्फ्रा; कोई ब्रोकरेज नहीं।",
-    "moonrise_note": "पोर्टफोलियो/इंवेस्टी कंपनियाँ कानूनी रूप से स्वतंत्र हैं और अपनी देनदारियों के लिए जिम्मेदार। ट्रांसफर अनुबंधों के अनुसार।",
-    "rights": "सर्वाधिकार सुरक्षित."
-  }
+  "disclaimer": "रिटर्न का कोई वादा नहीं। ऑपरेशन बाजार जोखिम, कानूनी आवश्यकताओं और रणनीतिक समायोजनों के अधीन हैं।"
+
 }
