--- a/src/locales/hi/transparencia.json
+++ b/src/locales/hi/transparencia.json
@@ -140,7 +140,7 @@
 
   "aria": { "copy_address": "पता कॉपी करें" },
 
-  "footer": "© MOONRISE TECHNOLOGIES LLC (WY, USA). सर्वाधिकार सुरक्षित.",
+  "footer": "© MOONRISE. सर्वाधिकार सुरक्षित.",
 
   "seo": {
     "meta_title": "MoonRise — ऑन-चेन पारदर्शिता",
