--- a/src/locales/pt/presale.json
+++ b/src/locales/pt/presale.json
@@ -92,6 +92,6 @@
     "brl_placeholder": "R$ ..."
   },
   "footer": {
-    "legal": "© MOONRISE TECHNOLOGIES LLC (WY, USA). All rights reserved."
+    "legal": "© MOONRISE. All rights reserved."
   }
 }
