--- a/src/locales/pt/transparencia.json
+++ b/src/locales/pt/transparencia.json
@@ -140,7 +140,7 @@
 
   "aria": { "copy_address": "Copiar endereço" },
 
-  "footer": "© MOONRISE TECHNOLOGIES LLC (WY, USA). All rights reserved.",
+  "footer": "© MOONRISE. All rights reserved.",
 
   "seo": {
     "meta_title": "MoonRise — Transparência On-chain",
