--- a/src/locales/ru/hero.json
+++ b/src/locales/ru/hero.json
@@ -1,26 +1,15 @@
 {
   "eyebrow": "ТЕХНОЛОГИИ • ИНФРАСТРУКТУРА • ИСПОЛНЕНИЕ",
-  "trustBadge": "Аудируемая операция в реальном времени",
-  "headline": "<1>MoonRise</1> строит <3>полную</3> экосистему.<br/>Собственная технология.<br/>Полная интеграция.<br/>Долгосрочное видение.",
+  "trustBadge": "Аудит в реальном времени",
+  "headline": "<1>MoonRise</1> строит <3>полную</3> экосистему.<br/>Собственные технологии.<br/>Полная интеграция.<br/>Долгосрочное видение.",
   "slogan": "Технологическая мощь для реальной финансовой системы. Без хайпа. Без оправданий.",
-  "subhead": "Инфраструктурная компания на блокчейне. Связанные продукты — сеть, кошелек, биржа и модули — с технической основой, прямым контролем и ясной миссией: создавать реальную ценность с автономией.",
-  "institutionalLine": "Публичная прозрачность, открытые контракты и отслеживание on-chain 24/7.",
+  "subhead": "Связанная блокчейн-инфраструктура — сеть, кошелёк, биржа и модули — с технической базой, прямым контролем и ясной миссией: создавать реальную ценность автономно.",
+  "institutionalLine": "Публичная прозрачность, открытые контракты и on-chain-трекер 24/7.",
   "kpisAriaLabel": "Ключевые показатели",
   "kpis": [
-    {
-      "label": "заблокировано от обращающегося предложения (on-chain)",
-      "countTo": 68.75,
-      "suffix": "%",
-      "decimals": 2
-    },
-    {
-      "label": "Токенизированные реальные активы (Moon+)",
-      "value": "RWA"
-    },
-    {
-      "label": "MoonRise Technologies · WY",
-      "value": "LLC США"
-    }
+    { "label": "заблокировано из обращающегося объёма (on-chain)", "countTo": 68.75, "suffix": "%", "decimals": 2 },
+    { "label": "Токенизированные реальные активы (Moon+)", "value": "RWA" },
+    { "label": "Глобальная, аудируемая инфраструктура", "value": "MoonRise" }
   ],
   "cta": {
     "ecosystem": "Изучить экосистему",
