--- a/src/locales/ru/moonplus.json
+++ b/src/locales/ru/moonplus.json
@@ -65,11 +65,5 @@
       { "q": "Кто управляет активами?", "a": "Отраслевые компании и независимые SPV, отвечающие по своим обязательствам." }
     ]
   },
-  "disclaimer": "Без обещания доходности. Операции подвержены рыночным рискам, правовым требованиям и стратегическим корректировкам.",
-  "legal": {
-    "moonplus_name": "MoonRise Technologies",
-    "moonplus_jurisdiction": "Зарегистрированная LLC (WY, USA). Moon+: техническая инфраструктура RWA; без брокериджа.",
-    "moonrise_note": "Портфельные компании юридически независимы и отвечают по своим обязательствам. Переводы согласно контрактам.",
-    "rights": "Все права защищены."
-  }
+  "disclaimer": "Без обещания доходности. Операции подвержены рыночным рискам, правовым требованиям и стратегическим корректировкам."
 }
