--- a/src/locales/ru/transparencia.json
+++ b/src/locales/ru/transparencia.json
@@ -140,7 +140,7 @@
 
   "aria": { "copy_address": "Копировать адрес" },
 
-  "footer": "© MOONRISE TECHNOLOGIES LLC (WY, USA). Все права защищены.",
+  "footer": "© MOONRISE. Все права защищены.",
 
   "seo": {
     "meta_title": "MoonRise — Ончейн-прозрачность",
