--- a/src/locales/zh/about.json
+++ b/src/locales/zh/about.json
@@ -1,22 +1,22 @@
 {
   "title": "MoonRise",
   "hero": {
-    "tag": "公司 • 架构 • 执行",
-    "lead": "在美国注册的控股公司。企业结构、清晰治理以及对执行与长期发展的绝对专注。"
+    "tag": "愿景 • 架构 • 执行",
+    "lead": "MoonRise 是一个全球化生态系统，结构稳固，治理清晰，专注执行并着眼长期。"
   },
   "who": {
     "title": "我们是谁",
     "paragraphs": [
-      "MoonRise Holdings LLC 是一家科技与金融公司。我们的使命是通过流程、安全与规模建设真实的基础设施。",
-      "我们按照国际标准运作，设有明确的内部控制与客观的沟通。没有承诺，只有交付。"
+      "MoonRise 是以科技与金融为基础的生态系统。我们的使命是以流程、安全与可扩展性建设真实的基础设施。",
+      "我们按国际标准运营，内部管控清晰，沟通直接。不给空头承诺，只交付结果。"
     ]
   },
   "purpose": {
-    "title": "我们的使命",
+    "title": "我们的目的",
     "items": [
-      "为现代金融运作开发关键技术。",
-      "标准化流程、降低风险并提升执行速度。",
-      "将合作伙伴与投资者连接到一个严肃且可审计的运营中。"
+      "为现代金融业务开发关键技术。",
+      "标准化流程，降低风险，提高执行速度。",
+      "把合作伙伴与投资者连接到一个严谨、可审计且可持续的架构。"
     ]
   },
   "values": {
@@ -26,28 +26,22 @@
   "experience": {
     "title": "我们的经验",
     "items": [
-      "以安全为核心的系统架构与可审计合约。",
-      "精益化企业运作、清晰流程与数据驱动的决策。",
-      "持续交付：规划、版本管理、测量与改进。"
+      "以安全为先，构建可审计的系统与合约。",
+      "精益运营，流程清晰，数据驱动决策。",
+      "持续交付：规划、版本化、度量与不断改进。"
     ]
   },
   "stats": [
-    { "value": "全球", "label": "范围" },
-    { "value": "美国注册", "label": "法律基础" },
+    { "value": "全球", "label": "版图" },
+    { "value": "坚实基础", "label": "根基" },
     { "value": "流程", "label": "执行方法" },
-    { "value": "透明", "label": "管理" }
+    { "value": "透明", "label": "治理" }
   ],
-  "legal": {
-    "title": "法律注册",
-    "company": "MoonRise Technologies LLC",
-    "place": "怀俄明州, 美国",
-    "id": "ID #2025-00169-WY"
-  },
   "contact": {
     "title": "联系我们",
     "channels_title": "官方渠道：",
-    "summary": "机构支持、合作伙伴关系或疑问？请联系我们的团队。",
-    "hours": "企业服务时间：周一至周五，9:00–18:00（BRT）"
+    "summary": "需要机构支持、合作或有疑问？请联系团队。",
+    "hours": "服务时间：周一至周五 9:00–18:00（BRT）"
   },
   "cta": {
     "contact": "联系团队"
@@ -56,10 +50,10 @@
     "open_btn": "关于创始人",
     "modal": {
       "title": "Felipe Araújo — 创始人 & CEO",
-      "body": "我是 Felipe Araújo，巴西企业家，MoonRise Technologies 的创始人。多年前，我的职业生涯始于技术、编程、数字营销和企业管理等领域。这些经历让我获得了企业如何成长、何处失败以及哪些基础能够真正支撑长期成果的实际视角。\n\n我始终相信，纪律、透明和一致性是不容妥协的原则。没有捷径：只有流程、日常执行和在每个决策中的个人责任。这种心态带我走到了今天，也是我领导方式的基石。\n\n在我的旅程中，我亲眼见证了一个反复出现的问题，无论是在传统市场还是在加密领域：缺乏透明度、空洞的承诺以及缺乏坚实基础而诞生的项目，最终让投资者蒙受损失。这种情况让我深感不安。正因如此，我决定创立 MoonRise：证明建立一个透明、严肃、长期的金融生态系统是可能的。\n\n从一开始，我就做出了明确的决定：先交付，再销售。甚至在预售之前，我们已经在开发应用 MoonWallet，并搭建公司的透明度基础。我们用自有资金完成了这些，因为我相信，只有当已经存在真实执行时，才有资格请求他人的信任。\n\n另一个战略选择与代币供应有关。在初始销毁后，80亿个活跃代币中，我的个人分配仅为2000万（0.25%），全部锁定12个月，并存于公开合约中。这表明我并非追求个人利益，也不是能够砸盘的“鲸鱼”。我的成功，就像任何投资者一样，完全依赖于 MoonRise 的可持续增长。\n\n我的愿景很清晰：我不是来通过抛售代币致富的，而是要建立一家能够创造真实、稳固、可持续收入的公司。我相信，只有这样才能创造真正的价值 —— 当公司与投资者一同成长时。\n\nMoonRise 不是为投机而生，而是为了治理、执行，并为一个失去信任的市场带来信心。这是我作为创始人的承诺：以身作则，坚持纪律，建设能够经得起时间考验的事业。",
-      "cta_label": "查看 Instagram 个人资料",
+      "body": "我是 Felipe Araújo，巴西企业家，MoonRise 创始人。我的经历融合了技术、编程、营销与管理——这些经验让我明白真正的结果如何产生：靠纪律、透明与一致性。\n\nMoonRise 诞生之初使命明确：证明可以构建一个透明、稳固、可长期发展的金融生态。我们先交付再销售——从第一天起就用自有资源开发 MoonWallet 并搭建透明化基础。\n\n我的个人份额极少，并通过公开合约锁定，这进一步强调我们的重心是可持续增长，而非投机。我们相信由执行、结果与信任所创造的真实价值。\n\nMoonRise 不是为许诺而生，而是为交付而生——以清晰、责任与长期目标为导向。",
+      "cta_label": "查看 Instagram 主页",
       "close": "关闭",
-      "aria_close": "关闭创始人窗口"
+      "aria_close": "关闭创始人模态框"
     }
   }
 }
