--- a/src/locales/zh/transparencia.json
+++ b/src/locales/zh/transparencia.json
@@ -141,7 +141,7 @@
 
   "aria": { "copy_address": "复制地址" },
 
-  "footer": "© MOONRISE TECHNOLOGIES LLC (WY, USA). 保留所有权利。",
+  "footer": "© MOONRISE.  保留所有权利。",
 
   "seo": {
     "meta_title": "MoonRise — 链上透明度",
