--- a/src/locales/fr/hero.json
+++ b/src/locales/fr/hero.json
@@ -1,29 +1,18 @@
 {
   "eyebrow": "TECHNOLOGIE • INFRASTRUCTURE • EXÉCUTION",
-  "trustBadge": "Opération vérifiable en temps réel",
-  "headline": "<1>MoonRise</1> construit un écosystème <3>complet</3>.<br/>Technologie propriétaire.<br/>Intégration totale.<br/>Vision à long terme.",
-  "slogan": "Puissance technologique pour le système financier réel. Pas de hype. Pas d’excuses.",
-  "subhead": "Entreprise d’infrastructure sur blockchain. Produits connectés — réseau, portefeuille, bourse et modules — avec base technique, contrôle direct et mission claire : construire une valeur réelle avec autonomie.",
-  "institutionalLine": "Transparence publique, contrats ouverts et suivi on-chain 24/7.",
+  "trustBadge": "Opération auditée en temps réel",
+  "headline": "<1>MoonRise</1> construit un écosystème <3>complet</3>.<br/>Technologie propriétaire.<br/>Intégration totale.<br/>Vision long terme.",
+  "slogan": "Puissance technologique pour la finance réelle. Pas de hype. Pas d’excuses.",
+  "subhead": "Infrastructure blockchain connectée — réseau, portefeuille, plateforme d’échange et modules — avec base technique, contrôle direct et mission claire : créer de la valeur réelle en autonomie.",
+  "institutionalLine": "Transparence publique, contrats ouverts et traçabilité on-chain 24/7.",
   "kpisAriaLabel": "Indicateurs clés",
   "kpis": [
-    {
-      "label": "de l’offre en circulation verrouillée (on-chain)",
-      "countTo": 68.75,
-      "suffix": "%",
-      "decimals": 2
-    },
-    {
-      "label": "Actifs réels tokenisés (Moon+)",
-      "value": "RWA"
-    },
-    {
-      "label": "MoonRise Technologies · WY",
-      "value": "LLC USA"
-    }
+    { "label": "de l’offre circulante verrouillée (on-chain)", "countTo": 68.75, "suffix": "%", "decimals": 2 },
+    { "label": "Actifs réels tokenisés (Moon+)", "value": "RWA" },
+    { "label": "Infrastructure globale et auditable", "value": "MoonRise" }
   ],
   "cta": {
-    "ecosystem": "Explorer l’Écosystème",
-    "presale": "Participer à la Prévente"
+    "ecosystem": "Explorer l’écosystème",
+    "presale": "Entrer dans la prévente"
   }
 }
