--- a/src/locales/ru/about.json
+++ b/src/locales/ru/about.json
@@ -1,65 +1,59 @@
 {
   "title": "MoonRise",
   "hero": {
-    "tag": "КОМПАНИЯ • СТРУКТУРА • ИСПОЛНЕНИЕ",
-    "lead": "Холдинг, зарегистрированный в США. Корпоративная структура, прозрачное управление и абсолютный фокус на исполнении и долгосрочной перспективе."
+    "tag": "ВИДЕНИЕ • СТРУКТУРА • ИСПОЛНЕНИЕ",
+    "lead": "MoonRise — это глобальная экосистема с прочной структурой, понятным управлением и безусловным фокусом на исполнении и долгосрочной перспективе."
   },
   "who": {
-    "title": "Кто Мы",
+    "title": "Кто мы",
     "paragraphs": [
-      "MoonRise Holdings LLC — это технологическая и финансовая компания. Наша задача — строить реальную инфраструктуру с процессами, безопасностью и масштабируемостью.",
-      "Мы работаем по международным стандартам, с определёнными внутренними контролями и объективной коммуникацией. Никаких обещаний. Только результат."
+      "MoonRise — экосистема на стыке технологий и финансов. Наша цель — строить реальную инфраструктуру с процессами, безопасностью и масштабируемостью.",
+      "Мы работаем по международным стандартам, с выстроенными внутренними контролями и прямой коммуникацией. Никаких обещаний. Только результат."
     ]
   },
   "purpose": {
-    "title": "Наша Цель",
+    "title": "Зачем мы здесь",
     "items": [
-      "Разрабатывать критические технологии для современных финансовых операций.",
-      "Стандартизировать процессы, снижать риски и увеличивать скорость исполнения.",
-      "Соединять партнёров и инвесторов с серьёзной и поддающейся аудиту операцией."
+      "Разрабатывать ключевые технологии для современных финансовых операций.",
+      "Стандартизировать процессы, снижать риски и повышать скорость исполнения.",
+      "Соединять партнеров и инвесторов с серьезной, аудируемой и устойчивой структурой."
     ]
   },
   "values": {
-    "title": "Наши Принципы",
-    "items": ["Прозрачность", "Совершенство", "Инновации", "Скорость", "Последовательность"]
+    "title": "Наши опоры",
+    "items": ["Прозрачность", "Выдержка", "Инновации", "Скорость", "Последовательность"]
   },
   "experience": {
-    "title": "Наш Опыт",
+    "title": "Наш опыт",
     "items": [
-      "Архитектура систем и проверяемые контракты с акцентом на безопасность.",
-      "Оптимизированная корпоративная структура, чёткие процессы и решения на основе данных.",
-      "Непрерывная доставка: планирование, версии, измерение и улучшение."
+      "Разработка аудируемых систем и контрактов с приоритетом безопасности.",
+      "Легкая операционная модель, четкие процессы и решения на основе данных.",
+      "Непрерывная поставка: планирование, версионирование, измерение и постоянное улучшение."
     ]
   },
   "stats": [
-    { "value": "Глобально", "label": "Масштаб" },
-    { "value": "Регистрация в США", "label": "Правовая база" },
+    { "value": "Глобально", "label": "Присутствие" },
+    { "value": "Прочный фундамент", "label": "Основа" },
     { "value": "Процесс", "label": "Метод исполнения" },
     { "value": "Прозрачность", "label": "Управление" }
   ],
-  "legal": {
-    "title": "Юридическая Регистрация",
-    "company": "MoonRise Technologies LLC",
-    "place": "Вайоминг, США",
-    "id": "ID #2025-00169-WY"
-  },
   "contact": {
-    "title": "Свяжитесь с Нами",
-    "channels_title": "Официальные Каналы:",
-    "summary": "Институциональная поддержка, партнёрства или вопросы? Свяжитесь с нашей командой.",
-    "hours": "Корпоративное обслуживание: пн–пт, 9:00–18:00 (BRT)"
+    "title": "Связаться с нами",
+    "channels_title": "Официальные каналы:",
+    "summary": "Институциональная поддержка, партнерства или вопросы? Напишите нашей команде.",
+    "hours": "Часы работы: Пн–Пт, 9:00–18:00 (BRT)"
   },
   "cta": {
     "contact": "Связаться с командой"
   },
   "founder": {
-    "open_btn": "О Основателе",
+    "open_btn": "О основателе",
     "modal": {
       "title": "Фелипе Араужо — Основатель и CEO",
-      "body": "Я Фелипе Араужо, бразильский предприниматель и основатель MoonRise Technologies. Моя карьера началась много лет назад в таких областях, как технологии, программирование, цифровой маркетинг и управление бизнесом. Эти опыты дали мне практическое понимание того, как компании растут, где они терпят неудачу и какие основы действительно обеспечивают долгосрочные результаты.\n\nЯ всегда считал, что дисциплина, прозрачность и последовательность — это принципы, которые нельзя нарушать. Нет никаких коротких путей: только процесс, ежедневное выполнение и личная ответственность в каждом решении. Такое мышление привело меня сюда и лежит в основе моего стиля руководства.\n\nНа протяжении своего пути я неоднократно сталкивался с одной и той же проблемой как на традиционном рынке, так и в криптосфере: отсутствие прозрачности, пустые обещания и проекты, рождающиеся без прочной основы, что оставляло инвесторов в убытке. Эта ситуация глубоко меня тревожила. Именно поэтому я решил основать MoonRise: чтобы доказать, что возможно построить прозрачную, серьёзную и долгосрочную финансовую экосистему.\n\nС самого начала я принял чёткое решение: сначала выполнять, потом продавать. Ещё до предпродажи мы уже разрабатывали наше приложение MoonWallet и выстраивали базу прозрачности компании. Мы сделали это на собственные средства, потому что я считаю, что доверие можно просить только тогда, когда есть реальные результаты.\n\nЕщё одно стратегическое решение касалось токенов. Из 8 миллиардов активных токенов после первоначального сжигания моя личная доля составляет всего 20 миллионов (0,25 %), и все они заблокированы на 12 месяцев в публичном контракте. Это показывает, что я не ищу личной выгоды и не являюсь «китом», способным обрушить рыночную цену. Мой успех, как и успех любого инвестора, полностью зависит от устойчивого роста MoonRise.\n\nМоё видение ясно: я не здесь, чтобы обогатиться, продавая токены, а чтобы построить компанию, которая создаёт реальные, надёжные и устойчивые доходы. Я уверен, что только так можно создать истинную ценность — когда и компания, и инвесторы растут вместе.\n\nMoonRise не была создана для спекуляций. Она создана для управления, исполнения и возвращения доверия в дискредитированный рынок. Это обязательство, которое я беру на себя как основатель: вести примером, сохранять дисциплину и строить то, что выдержит испытание временем.",
+      "body": "Я Фелипе Араужо, бразильский предприниматель и основатель MoonRise. Мой путь объединяет технологии, программирование, маркетинг и менеджмент — опыт, который показал, как создаются реальные результаты: дисциплина, прозрачность и последовательность.\n\nMoonRise возникла с четкой миссией: доказать, что возможно построить прозрачную, прочную и долговечную финансовую экосистему. Мы начали с результата до продаж — разработали MoonWallet и основу прозрачности с первого дня на собственные средства.\n\nМоя личная доля минимальна и заблокирована публичным контрактом — наш фокус на устойчивом росте, а не на спекуляциях. Мы верим в реальную ценность, создаваемую исполнением, результатом и доверием.\n\nMoonRise создана не для обещаний, а для результатов — с ясностью, ответственностью и долгосрочной целью.",
       "cta_label": "Посмотреть профиль в Instagram",
       "close": "Закрыть",
-      "aria_close": "Закрыть модальное окно основателя"
+      "aria_close": "Закрыть модальное окно об основателе"
     }
   }
 }
